tests/should_fail/bug/1519.stderr
error[E0034]: multiple applicable items in scope
  --> 1519.rs:51:32
   |
51 |             self.0.op(other.0).and_then_logic(|x:T| {
   |                                ^^^^^^^^^^^^^^ multiple `and_then_logic` found
   |
note: candidate #1 is defined in an impl of the trait `OptionExt` for the type `std::option::Option<T>`
  --> 1519.rs:15:5
   |
15 |     fn and_then_logic<U>(self, f: Mapping<T, Option<U>>) -> Option<U> {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: candidate #2 is defined in an impl of the trait `creusot_contracts::std::option::OptionExt` for the type `std::option::Option<T>`
help: disambiguate the method for candidate #1
   |
50 ~         OptionExt::and_then_logic(pearlite! {
51 +             self.0.op(other.0).and_then_logic(|x:T| {
52 +                 self.1.op(other.1).and_then_logic(|y:U| {
53 +                     Some((x, y))
54 +                 })
55 +             })
56 +         }, |x:T| {
57 +                 self.1.op(other.1).and_then_logic(|y:U| {
58 +                     Some((x, y))
59 +                 })
60 +             })
   |
help: disambiguate the method for candidate #2
   |
50 ~         creusot_contracts::std::option::OptionExt::and_then_logic(pearlite! {
51 +             self.0.op(other.0).and_then_logic(|x:T| {
52 +                 self.1.op(other.1).and_then_logic(|y:U| {
53 +                     Some((x, y))
54 +                 })
55 +             })
56 +         }, |x:T| {
57 +                 self.1.op(other.1).and_then_logic(|y:U| {
58 +                     Some((x, y))
59 +                 })
60 +             })
   |

error[E0034]: multiple applicable items in scope
  --> 1519.rs:52:36
   |
52 |                 self.1.op(other.1).and_then_logic(|y:U| {
   |                                    ^^^^^^^^^^^^^^ multiple `and_then_logic` found
   |
note: candidate #1 is defined in an impl of the trait `OptionExt` for the type `std::option::Option<T>`
  --> 1519.rs:15:5
   |
15 |     fn and_then_logic<U>(self, f: Mapping<T, Option<U>>) -> Option<U> {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: candidate #2 is defined in an impl of the trait `creusot_contracts::std::option::OptionExt` for the type `std::option::Option<T>`
help: disambiguate the method for candidate #1
   |
50 ~         OptionExt::and_then_logic(pearlite! {
51 +             self.0.op(other.0).and_then_logic(|x:T| {
52 +                 self.1.op(other.1).and_then_logic(|y:U| {
53 +                     Some((x, y))
54 +                 })
55 +             })
56 +         }, |y:U| {
57 +                     Some((x, y))
58 +                 })
   |
help: disambiguate the method for candidate #2
   |
50 ~         creusot_contracts::std::option::OptionExt::and_then_logic(pearlite! {
51 +             self.0.op(other.0).and_then_logic(|x:T| {
52 +                 self.1.op(other.1).and_then_logic(|y:U| {
53 +                     Some((x, y))
54 +                 })
55 +             })
56 +         }, |y:U| {
57 +                     Some((x, y))
58 +                 })
   |

error[E0046]: not all trait items implemented, missing: `le`, `idemp`
  --> 1519.rs:42:1
   |
36 |       fn le(self, other: Self) -> bool;
   |       --------------------------------- `le` from trait
...
39 |       fn idemp(self) -> bool;
   |       ----------------------- `idemp` from trait
...
42 | / impl<T, U> RA for (T, U)
43 | | where
44 | |     T: RA,
45 | |     U: RA,
   | |__________^ missing `le`, `idemp` in implementation

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0034, E0046.
For more information about an error, try `rustc --explain E0034`.
